# src/features/friendship/frnd.schema.js
@@ -1,0 +1,14 @@
+import mongoose from "mongoose";
+
+export const friendRequestSchema = new mongoose.Schema({
+	friendID: {
+		type: mongoose.Schema.Types.ObjectId,
+		ref: "User",
+	},
+	friendReqID: [
+		{
+			type: mongoose.Schema.Types.ObjectId,
+			ref: "User",
+		},
+	],
+});
