# src/features/friendship/frndship.userFriend.schema.js
@@ -1,0 +1,14 @@
+import mongoose from "mongoose";
+
+export const userFriendSchema = new mongoose.Schema({
+	userID: {
+		type: mongoose.Schema.Types.ObjectId,
+		ref: "User",
+	},
+	friendID: [
+		{
+			type: mongoose.Schema.Types.ObjectId,
+			ref: "User",
+		},
+	],
+});
